# VToC

./: README.md  phrases.json
Py/: README.md  cmd.txt  main.py  mainLITEST.py  main_stream.py  my_database.db  phrases.json  populate_database.py  requirements.txt  speech_to_text.py
cpp/: CMakeLists.txt  FindPortAudio.cmake
cpp/binPA/: Makefile  cmake_install.cmake  cmake_uninstall.cmake  portaudio-2.0.pc
cpp/src/: main.cpp  record.cpp
